# telegram_bot

./: .gitignore  bot.py  pyproject.toml
tgbot/filters/: role.py
tgbot/middlewares/: database.py
tgbot/routes/: __init__.py
tgbot/routes/admin/: welcome.py
